ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
      - backend:
          service:
            name: test01
            port:
              number: 80
  - host: for.bar.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
      - backend:
          service:
            name: test02
            port:
              number: 80
